fix: edit project and add member index

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
       end_date: "End date"
       description: "Description"
       new_project: "New project"
+      stt: "No."
     search_form:
       name: "Project name"
       group: "Group"
